--- a/changelog
+++ b/changelog
@@ -44,6 +44,7 @@ tractags-0.7 (not yet released)
  * #9210: /tags page should not have a contextual navigation link 'Cloud'
  * #9521: New install impossible on Trac 0.13dev
    by adding generic db schema upgrade support
+ * #10636: TagWikiMacros is NOT thread safe
  * #11096: Avoid an `OperationalError: too many SQL variables
  * #11152: Tags are not supported on the 'wiki' realm
  * #11226: Replacing a tag removes unrelated tags
