TagsPlugin: Add release tag for `0.7`, pushing development to `tractags-0.8dev`.
Note, that [13815] forgot to mention, that the release closes #11226 too.


git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@13816 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -2,7 +2,10 @@ Originally created by Muness Alrubaie, totally rewritten by
 Author: Alec Thomas <alec@swapoff.org>
 Maintainer: Steffen Hoffmann <hoff.st@web.de>
 
-tractags-0.7 (not yet released)
+tractags-0.8 (not yet released)
+
+
+tractags-0.7 (06-Apr-2014)
  resolved issues
  * #1960: Tags from Tickets / Milestones split into multiple tags
  * #2424: Lost wiki change when commiting tag changes
