TagsPlugin: Add configurable prefix for tag wiki pages, refs #9797.
These changes follow a contributed patch, and reduced debug logging for wiki
macros and a few other minor changes are added on-top.

git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@13848 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -3,6 +3,8 @@ Author: Alec Thomas <alec@swapoff.org>
 Maintainer: Steffen Hoffmann <hoff.st@web.de>
 
 tractags-0.8 (not yet released)
+ new features
+ * #9797: Add configurable prefix for linking tags to wiki pages
 
 
 tractags-0.7 (06-Apr-2014)
