TagsPlugin: Use tags for fine-grained permissions on tagged resources, refs #3891.
So an idea for the days, when permission providers for Trac were born, finally
has come true.

git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@13851 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -4,7 +4,9 @@ Maintainer: Steffen Hoffmann <hoff.st@web.de>
 
 tractags-0.8 (not yet released)
  new features
+ * #3891: TagSystem.get_tags(req, resource) should not need a full req object
  * #9797: Add configurable prefix for linking tags to wiki pages
+ add optional fine-grained permissions based on resource tags
 
 
 tractags-0.7 (06-Apr-2014)
