TagsPlugin: Prepare tag change records for timeline view, refs #11661.
This is the minimal solution proving only changes recorded by !TagsPlugin.

Since [13428] tag changes are saved, but only for wiki pages by default.
So changes recorded with tagged resources like tickets are left out here.
Hint: Use realm's native timeline event providers (i. e. `ticket_show_details`
option in ''trac.ini'' section `[timeline]` for tickets) to get them.

git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@13854 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -6,6 +6,7 @@ tractags-0.8 (not yet released)
  new features
  * #3891: TagSystem.get_tags(req, resource) should not need a full req object
  * #9797: Add configurable prefix for linking tags to wiki pages
+ * #11661: Changes to Tags should be shown in timeline
  add optional fine-grained permissions based on resource tags
 
 
