TagsPlugin: Merge code from KeywordSuggestPlugin's current `trunk` (0.5.0dev), refs #1344, #3816, #4201 and #4503.
Functional overlap of the aforementioned plugin with !TagsPlugin is a fact.
!TagsPlugin lacking auto-complete-style assistance for 'keyword' alias tag
input fields took a lot from its potential efficiency.

Consequently !KeywordSuggestPlugin is getting integrated from now.
Maintaining said plugin separately as another low-profile plugin for users
that dislike !TagsPlugin might still happen depending on developer priorities
and user feedback.

PEP8 clean-up and move to TagsPlugin >= 0.7 performance-enhanced API for
querying current tag list has been done on the way.

git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@13860 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -5,6 +5,8 @@ Maintainer: Steffen Hoffmann <hoff.st@web.de>
 tractags-0.8 (not yet released)
  new features
  * #1304: Implement tags related XMLRPC methods
+ * #1344: Choose tags via dropdown list
+ by integrating KeywordSuggestPlugin
  * #3891: TagSystem.get_tags(req, resource) should not need a full req object
  * #9797: Add configurable prefix for linking tags to wiki pages
  * #11661: Changes to Tags should be shown in timeline
