TagsPlugin: Improve tag change author detection, refs #11695.
git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@13862 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -3,6 +3,9 @@ Author: Alec Thomas <alec@swapoff.org>
 Maintainer: Steffen Hoffmann <hoff.st@web.de>
 
 tractags-0.8 (not yet released)
+ resolved issues
+ * #11695: Changes to tags may be recorded as anonymous
+
  new features
  * #1304: Implement tags related XMLRPC methods
  * #1344: Choose tags via dropdown list
