TagsPlugin: Create filter component to show events only for resources matching tag query, refs #3660.
The input field added to timeline preferences box accepts full !TagQuery
syntax, even filtering events by taggable realm without specifying a tag.

git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@13873 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -10,6 +10,7 @@ tractags-0.8 (not yet released)
  * #1304: Implement tags related XMLRPC methods
  * #1344: Choose tags via dropdown list
  by integrating KeywordSuggestPlugin
+ * #3660: timeline display wiki/ticket changes only to items matching some tags
  * #3891: TagSystem.get_tags(req, resource) should not need a full req object
  * #9797: Add configurable prefix for linking tags to wiki pages
  * #11661: Changes to Tags should be shown in timeline
