TagsPlugin: Unhide missing permission as root cause for inacessible plugin pages, refs #11888.
Delayed, non-redundant permission check prevents 'No handler matched request'
error.

git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@14041 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -9,12 +9,13 @@ tractags-0.8 (not yet released)
  new features
  * #1304: Implement tags related XMLRPC methods
  * #1344: Choose tags via dropdown list
- by integrating KeywordSuggestPlugin
+   by integrating KeywordSuggestPlugin
  * #3660: timeline display wiki/ticket changes only to items matching some tags
  * #3891: TagSystem.get_tags(req, resource) should not need a full req object
  * #9797: Add configurable prefix for linking tags to wiki pages
  * #11661: Changes to Tags should be shown in timeline
  * #11690: Document which components are required
+ * #11888: Show correct permission error instead of 'No handler matched ...'
  add optional fine-grained permissions based on resource tags
 
 
