TagsPlugin: Add 'compact' format for `ListTagged` inline result presentation, refs #9064.
git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@14132 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -17,6 +17,7 @@ tractags-0.8 (not yet released)
  * #11690: Document which components are required
  * #11888: Show correct permission error instead of 'No handler matched ...'
  add optional fine-grained permissions based on resource tags
+ add inline presentation format for ListTagged results
 
 
 tractags-0.7 (06-Apr-2014)
