TagsPlugin: Improve request object mockup, refs #11695 and #11954.
Thanks to bobhy for reporting the error on anonymous ticket creation.
The issue has been caused by using `get_reporter_id()` from `trac.util` for
better author detection since [13862] without paying attention to the
additional attributes it actually tries to get on anonymous changes.

git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@14144 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -16,6 +16,7 @@ tractags-0.8 (not yet released)
  * #11661: Changes to Tags should be shown in timeline
  * #11690: Document which components are required
  * #11888: Show correct permission error instead of 'No handler matched ...'
+ * #11954: AttributeError: 'Mock' object has no attribute 'args'
  add optional fine-grained permissions based on resource tags
  add inline presentation format for ListTagged results
 
