TagsPlugin: Catch inappropriate macro arguments for `ListTagged`, refs #12292.
Thanks for the patch including unit tests by Ryan J. Ollos, applied here
with minor modifications.

git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@14785 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -7,6 +7,7 @@ tractags-0.8 (not yet released)
  * #11695: Changes to tags may be recorded as anonymous
  * #11950: The tag TracLink doesn't allow trailing arguments
    by supporting the 'realm' attribute in tag query expressions
+ * #12292: AssertionError: Page 5 out of range
 
  new features
  * #1304: Implement tags related XMLRPC methods
