TagsPlugin: Skip timeline event filter in case of error response, refs #12434.
Improve backwards-compatibility by replacing `req.session.set()`, that has been
unavailable before Trac 0.12.4 - a discovery from one of the added unit tests.
The unit test request mockup was inspired by Ryan J. Ollos recent test code for
VotePlugin.

git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@14786 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -8,6 +8,7 @@ tractags-0.8 (not yet released)
  * #11950: The tag TracLink doesn't allow trailing arguments
    by supporting the 'realm' attribute in tag query expressions
  * #12292: AssertionError: Page 5 out of range
+ * #12434: AttributeError: 'NoneType' object has no attribute 'get' 
 
  new features
  * #1304: Implement tags related XMLRPC methods
