TagsPlugin: Added `exclude` argument for `ListTagged` macro to allow resources selection using shell-style patterns, refs 12202.
git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@14787 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/changelog
+++ b/changelog
@@ -22,6 +22,7 @@ tractags-0.8 (not yet released)
  * #11888: Show correct permission error instead of 'No handler matched ...'
  * #11954: AttributeError: 'Mock' object has no attribute 'args'
  * #11968: Add method TagSystem.get_taggable_realms
+ * #12202: Exclude option for ListTagged macro
  add optional fine-grained permissions based on resource tags
  add inline presentation format for ListTagged results
 
